<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signup">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:background="#000A0A0A"
        android:text="@string/create_a_new_account"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHighlight="@color/design_default_color_on_secondary"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:text="@string/it_s_quick_and_easy"
        android:textColor="@color/design_default_color_on_secondary"
        android:textColorHighlight="@color/design_default_color_on_secondary"
        android:textSize="15sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/user_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="76dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/passwordForSignup"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="34dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signupTerms" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="signupclick"
        android:text="Sign Up" />

</LinearLayout>