<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game_Activity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/nestedmargintop"
        android:padding="@dimen/nestedpadding">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/imageviewwidth"
                android:layout_height="@dimen/imageviewheight"
                android:background="@color/colorPrimaryDark"
                android:id="@+id/game_thumbnail"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/game_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textviewlayoutmarhin"
                android:text="@string/game_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/game_cat_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/category" />

            <TextView
                android:id="@+id/game_dis_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textSize="@dimen/aaa" />

            <Button
                android:id="@+id/trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/watch_trailer"
                android:onClick="trailer"/>

            <Button
                android:id="@+id/download_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:textColor="@android:color/holo_green_light" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>